--- a/starter/package.json
+++ b/starter/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.56.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
